--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/resource_management_db
 spring.datasource.username=root
 spring.datasource.password=1997ababZJX
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.static-path-pattern=/static/**
