--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=resourceManagement
-spring.datasource.url=jdbc:mysql://localhost:3306/resource_management_db
-spring.datasource.username=root
-spring.datasource.password=1997ababZJX
+spring.datasource.url=jdbc:mysql://resourcemanagement.chagsqkoi5ip.us-east-1.rds.amazonaws.com/resource_management_db
+spring.datasource.username=admin
+spring.datasource.password=root3306
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern=/static/**
